--- a/venta/index.html
+++ b/venta/index.html
@@ -52,56 +52,14 @@
 
   <div class="mosaic">
 
+
+    <!--============-->
+    <!-- TECHNOLOGY -->
+    <!--============-->
     <div id="technology" class="section">
 
       <h2 style="color: blue">Tecnología y muebles</h2>
       <hr class="solid">
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/ps5_sold.jpeg" alt="">
-          <div class="details">
-	    <span class="title">Sony PS5 Standard (CFI-1115A) + Joystick inalámbrico Sony PlayStation DualSense Original Galactic Purple (CFI-ZCT1)</span>
-	    <span class="info">Son 2 controles, el original mas uno extra Galactic Purple<br>
-	    Precio: <b><s>$ 280.000</s> VENDIDA</b><br>
-	    Menos de 1 año desde la compra<br>
-	    Disponible: Agosto 2023</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/tv24_1_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">TV Sanyo LCD 24" (LCD-24XH7)</span>
-            <span class="info">Precio: <b><s>$ 24.000</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/tv42_1_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">TV Philips 42" LCD HD (42PFL3403/77)</span>
-            <span class="info">Precio: <b><s>$ 35.000</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/samsung_50_sold.jpg" alt="">
-          <div class="details">
-            <span class="title">TV Samsung 4k 50" Smart Serie 6 (UN50MU6100GCDF)</span>
-            <span class="info">Precio: <b><s>$ 110.000</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
 
       <div class="tiles">
 	<a class="tile" href="#">
@@ -121,17 +79,6 @@
             <span class="title">Heladera  con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
             <span class="info">Precio: <b>$ 180.000</b><br>
             Disponible: Junio</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/balanza_1_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Balanza Personal - NICTOM - Conexion a Smartphone</span>
-            <span class="info">Precio: <b><s>$ 2.500</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
           </div>
         </a>
       </div>
@@ -217,7 +164,7 @@
 	<a class="tile" href="#">
           <img src="images/cama_casa.jpg" alt="">
           <div class="details">
-            <span class="title">Cama Casita Montesori + Colchón + sábanas</span>
+            <span class="title">Cama Casita Montesori 150cm x 90cm x 160cm de alto + Colchón 140cm x 80cm + sábanas</span>
             <span class="info">Precio: <b>$ 15.000</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -235,22 +182,47 @@
         </a>
       </div>
 
-    </div>
-
-
-
-
-    <div id="kitchen" class="section">
-
-      <h2 style="color: blue">Cocina</h2>
-      <hr class="solid">
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/ps5_sold.jpeg" alt="">
+          <div class="details">
+	    <span class="title">Sony PS5 Standard (CFI-1115A) + Joystick inalámbrico Sony PlayStation DualSense Original Galactic Purple (CFI-ZCT1)</span>
+	    <span class="info">Son 2 controles, el original mas uno extra Galactic Purple<br>
+	    Precio: <b><s>$ 280.000</s> VENDIDA</b><br>
+	    Menos de 1 año desde la compra<br>
+	    Disponible: Agosto 2023</span>
+          </div>
+        </a>
+      </div>
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/plato_giratorio.jpeg" alt="">
+          <img src="images/tv24_1_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">Plato de Presentación Giratorio para Torta - 35cm</span>
-            <span class="info">Precio: <b>$ 3.000</b><br>
+            <span class="title">TV Sanyo LCD 24" (LCD-24XH7)</span>
+            <span class="info">Precio: <b><s>$ 24.000</s> VENDIDA</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/tv42_1_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">TV Philips 42" LCD HD (42PFL3403/77)</span>
+            <span class="info">Precio: <b><s>$ 35.000</s> VENDIDA</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/samsung_50_sold.jpg" alt="">
+          <div class="details">
+            <span class="title">TV Samsung 4k 50" Smart Serie 6 (UN50MU6100GCDF)</span>
+            <span class="info">Precio: <b><s>$ 110.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -262,6 +234,40 @@
           <div class="details">
             <span class="title">Sandwichera Phillips - Con superficie antiadherente - 700w</span>
             <span class="info">Precio: <b><s>$ 4.000</s> VENDIDA</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/balanza_1_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Balanza Personal - NICTOM - Conexion a Smartphone</span>
+            <span class="info">Precio: <b><s>$ 2.500</s> VENDIDA</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+    </div>
+
+
+
+    <!--=========-->
+    <!-- KITCHEN -->
+    <!--=========-->
+    <div id="kitchen" class="section">
+
+      <h2 style="color: blue">Cocina</h2>
+      <hr class="solid">
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/plato_giratorio.jpeg" alt="">
+          <div class="details">
+            <span class="title">Plato de Presentación Giratorio para Torta - 35cm</span>
+            <span class="info">Precio: <b>$ 3.000</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -291,55 +297,11 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/pastalinda_1_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Pastalinda - Fabrica de Pasta - Morris (MO-013)</span>
-            <span class="info">Precio: <b><s>$ 5.000</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
           <img src="images/cafetera.jpeg" alt="">
           <div class="details">
             <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
             <span class="info">Precio: <b>$ 100.000</b><br>
             Disponible: Agosto</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/tazas_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Tazas Cuadradas x 6 unidades + Tetera + Azucarera + Lechera</span>
-            <span class="info">Precio: <b><s>$ 9.000</s> VENDIDAS</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/copetineras_cuadradas_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Copetineras Cuadradas x 4 unidades</span>
-            <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/copetineras_flor_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">4 Copetineras en Flor</span>
-            <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
-            Disponible: Inmediato</span>
           </div>
         </a>
       </div>
@@ -357,43 +319,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/fuentes_vidrio_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Fuentes de Vidrio Acanaladas Marinex x 4 unidades - Apto Freezer, Horno y Microondas - 26cm x 6cm</span>
-            <span class="info">Precio: <b><s>$ 6.000</s> VENDIDAS</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/tuppers_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Tuppers de Vidrio con Tapa Plástica x 6 unidades - Apto Freezer, Horno y Microondas</span>
-            <span class="info">Precio: <b><s>$ 7.000</s> VENDIDOS</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
           <img src="images/escurreplatos.jpeg" alt="">
           <div class="details">
             <span class="title">Seca Platos Escurridor Premium 100% Acero Inoxidable - Incluye cubiertero y Bandeja para retirar el agua</span>
             <span class="info">Precio: <b>$ 14.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/jarra_vidrio_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Jarra de vidrio 1L</span>
-            <span class="info">Precio: <b><s>$ 1.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -454,11 +383,90 @@
         </a>
       </div>
 
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/pastalinda_1_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Pastalinda - Fabrica de Pasta - Morris (MO-013)</span>
+            <span class="info">Precio: <b><s>$ 5.000</s> VENDIDA</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/tazas_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Tazas Cuadradas x 6 unidades + Tetera + Azucarera + Lechera</span>
+            <span class="info">Precio: <b><s>$ 9.000</s> VENDIDAS</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/copetineras_cuadradas_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Copetineras Cuadradas x 4 unidades</span>
+            <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/copetineras_flor_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">4 Copetineras en Flor</span>
+            <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/fuentes_vidrio_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Fuentes de Vidrio Acanaladas Marinex x 4 unidades - Apto Freezer, Horno y Microondas - 26cm x 6cm</span>
+            <span class="info">Precio: <b><s>$ 6.000</s> VENDIDAS</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/tuppers_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Tuppers de Vidrio con Tapa Plástica x 6 unidades - Apto Freezer, Horno y Microondas</span>
+            <span class="info">Precio: <b><s>$ 7.000</s> VENDIDOS</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/jarra_vidrio_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Jarra de vidrio 1L</span>
+            <span class="info">Precio: <b><s>$ 1.000</s> VENDIDA</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
     </div>
 
 
 
-
+    <!--======-->
+    <!-- TOYS -->
+    <!--======-->
     <div id="toys" class="section">
 
       <h2 style="color: blue">Juguetes y Rodados</h2>
@@ -543,17 +551,6 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/bici_grande_1_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
-            <span class="info">Precio: <b><s>$ 50.000</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
           <img src="images/zanahorias.jpeg" alt="">
           <div class="details">
             <span class="title">Zanahorias - Mi primer juego de suma y resta</span>
@@ -602,6 +599,17 @@
           <div class="details">
             <span class="title">Set Protecciones Tuxs Profesional Kit Rodillera Codera Skate</span>
             <span class="info">Precio: <b>$ 9.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/bici_grande_1_sold.jpeg" alt="">
+          <div class="details">
+            <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
+            <span class="info">Precio: <b><s>$ 50.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
