Split into muebles

--- a/venta/index.html
+++ b/venta/index.html
@@ -43,7 +43,8 @@
   </header>
 
   <ul class="menu">
-    <li><a href="#technology">Tecnología y muebles</a></li>
+    <li><a href="#technology">Tecnología</a></li>
+    <li><a href="#muebles">Muebles</a></li>
     <li><a href="#kitchen">Cocina</a></li>
     <li><a href="#toys">Juguetes y Rodados</a></li>
   </ul>
@@ -52,13 +53,12 @@
 
   <div class="mosaic">
 
-
     <!--============-->
     <!-- TECHNOLOGY -->
     <!--============-->
     <div id="technology" class="section">
 
-      <h2 style="color: blue">Tecnología y muebles</h2>
+      <h2 style="color: blue">Tecnología</h2>
       <hr class="solid">
 
       <div class="tiles">
@@ -79,6 +79,17 @@
             <span class="title">Heladera  con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
             <span class="info">Precio: <b>$ 180.000</b><br>
             Disponible: Junio</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/cafetera.jpeg" alt="">
+          <div class="details">
+            <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
+            <span class="info">Precio: <b>$ 100.000</b><br>
+            Disponible: Agosto</span>
           </div>
         </a>
       </div>
@@ -129,54 +140,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/plancha.jpg" alt="">
+          <img src="images/plancha.jpeg" alt="">
           <div class="details">
             <span class="title">Plancha Philco Seca 1200W (PSP1217N) - Casi sin uso</span>
             <span class="info">Precio: <b>$ 5.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/mesa_plegable.jpeg" alt="">
-          <div class="details">
-            <span class="title">Mesa Plegable Porta Laptop / Desayuno</span>
-            <span class="info">Precio: <b>$ 5.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/comoda.jpg" alt="">
-          <div class="details">
-            <span class="title">Comoda 125cm x 86cm x 48cm Negra</span>
-            <span class="info">Precio: <b>$ 20.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/cama_casa.jpg" alt="">
-          <div class="details">
-            <span class="title">Cama Casita Montesori 150cm x 90cm x 160cm de alto + Colchón 140cm x 80cm + sábanas</span>
-            <span class="info">Precio: <b>$ 15.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/estanteria_cars.jpg" alt="">
-          <div class="details">
-            <span class="title">Biblioteca - Estantería con cajonera - Cars</span>
-            <span class="info">Precio: <b>$ 6.000</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -253,6 +220,62 @@
     </div>
 
 
+    <!--============-->
+    <!-- MUEBLES -->
+    <!--============-->
+    <div id="muebles" class="section">
+
+      <h2 style="color: blue">Muebles</h2>
+      <hr class="solid">
+
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/comoda.jpg" alt="">
+          <div class="details">
+            <span class="title">Comoda 125cm x 86cm x 48cm Negra</span>
+            <span class="info">Precio: <b>$ 20.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/cama_casa.jpeg" alt="">
+          <div class="details">
+            <span class="title">Cama Casita Montesori 150cm x 90cm x 160cm de alto + Colchón 140cm x 80cm + sábanas</span>
+            <span class="info">Precio: <b>$ 15.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/estanteria_cars.jpeg" alt="">
+          <div class="details">
+            <span class="title">Biblioteca - Estantería con cajonera - Cars</span>
+            <span class="info">Precio: <b>$ 6.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/mesa_plegable.jpeg" alt="">
+          <div class="details">
+            <span class="title">Mesa Plegable Porta Laptop / Desayuno</span>
+            <span class="info">Precio: <b>$ 5.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+    </div>
+
+
 
     <!--=========-->
     <!-- KITCHEN -->
@@ -291,17 +314,6 @@
             <span class="title">Vasos Durax - 6 unidades</span>
             <span class="info">Precio: <b>$ 1.000</b><br>
             Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/cafetera.jpeg" alt="">
-          <div class="details">
-            <span class="title">Cafetera Nespresso Lattissima Touch Black (F521-AR-BK-NE) - 1 año de uso</span>
-            <span class="info">Precio: <b>$ 100.000</b><br>
-            Disponible: Agosto</span>
           </div>
         </a>
       </div>
