--- a/venta/index.html
+++ b/venta/index.html
@@ -223,7 +223,18 @@
           <img src="images/comoda.jpg" alt="">
           <div class="details">
             <span class="title">Comoda 125cm x 86cm x 48cm Negra</span>
-            <span class="info">Precio: <b>$ 20.000</b><br>
+            <span class="info">Precio: <b>$ 30.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/placard.jpg" alt="">
+          <div class="details">
+            <span class="title">Placard 58cm ancho x 184cm alto x 47cm profundidad - 2 puertas - Melamina Blanco</span>
+            <span class="info">Precio: <b>$ 12.000</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
