--- a/venta/index.html
+++ b/venta/index.html
@@ -76,7 +76,7 @@
 	<a class="tile" href="#">
           <img src="images/heladera.jpeg" alt="">
           <div class="details">
-            <span class="title">Heladera  con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
+            <span class="title">Heladera con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
             <span class="info">Precio: <b>$ 180.000</b><br>
             Disponible: Junio</span>
           </div>
@@ -99,7 +99,7 @@
           <img src="images/perforadora.jpeg" alt="">
           <div class="details">
 	    <span class="title">Taladro percutor destornillador inalambrico Bauker (CD120)</span>
-            <span class="info">Precio: <b>$ 23.000</b><br>
+            <span class="info">Precio: <b><s>$ 23.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -121,7 +121,7 @@
           <img src="images/vitroconvector.jpg" alt="">
           <div class="details">
             <span class="title">Vitroconvector Calefactor eléctrico Peabody 2000W (PE-VC20B)</span>
-            <span class="info">Precio: <b>$ 15.000</b><br>
+            <span class="info">Precio: <b><s>$ 15.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -132,7 +132,7 @@
           <img src="images/plancha.jpeg" alt="">
           <div class="details">
             <span class="title">Plancha Philco Seca 1200W (PSP1217N) - Casi sin uso</span>
-            <span class="info">Precio: <b>$ 5.000</b><br>
+            <span class="info">Precio: <b><s>$ 5.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -312,7 +312,7 @@
           <img src="images/vasos_durax.jpeg" alt="">
           <div class="details">
             <span class="title">Vasos Durax - 6 unidades</span>
-            <span class="info">Precio: <b>$ 1.000</b><br>
+            <span class="info">Precio: <b><s>$ 1.000</s> VENDIDOS</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -323,7 +323,7 @@
           <img src="images/provolera.jpeg" alt="">
           <div class="details">
             <span class="title">Provoletera de cerámica - para microondas</span>
-            <span class="info">Precio: <b>$ 2.800</b><br>
+            <span class="info">Precio: <b><s>$ 2.800</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -334,7 +334,7 @@
           <img src="images/escurreplatos.jpeg" alt="">
           <div class="details">
             <span class="title">Seca Platos Escurridor Premium 100% Acero Inoxidable - Incluye cubiertero y Bandeja para retirar el agua</span>
-            <span class="info">Precio: <b>$ 14.000</b><br>
+            <span class="info">Precio: <b><s>$ 14.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -522,7 +522,7 @@
           <img src="images/camarero.jpeg" alt="">
           <div class="details">
             <span class="title">El Camarero - Un juego de Maldon</span>
-            <span class="info">Precio: <b>$ 3.500</b><br>
+            <span class="info">Precio: <b><s>$ 3.500</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
