Add sold images

--- a/venta/index.html
+++ b/venta/index.html
@@ -96,7 +96,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/perforadora.jpeg" alt="">
+          <img src="images/perforadora_sold.jpeg" alt="">
           <div class="details">
 	    <span class="title">Taladro percutor destornillador inalambrico Bauker (CD120)</span>
             <span class="info">Precio: <b><s>$ 23.000</s> VENDIDO</b><br>
@@ -118,7 +118,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/vitroconvector.jpg" alt="">
+          <img src="images/vitroconvector_sold.jpg" alt="">
           <div class="details">
             <span class="title">Vitroconvector Calefactor eléctrico Peabody 2000W (PE-VC20B)</span>
             <span class="info">Precio: <b><s>$ 15.000</s> VENDIDO</b><br>
@@ -129,7 +129,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/plancha.jpeg" alt="">
+          <img src="images/plancha_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Plancha Philco Seca 1200W (PSP1217N) - Casi sin uso</span>
             <span class="info">Precio: <b><s>$ 5.000</s> VENDIDO</b><br>
@@ -309,7 +309,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/vasos_durax.jpeg" alt="">
+          <img src="images/vasos_durax_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Vasos Durax - 6 unidades</span>
             <span class="info">Precio: <b><s>$ 1.000</s> VENDIDOS</b><br>
@@ -320,7 +320,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/provolera.jpeg" alt="">
+          <img src="images/provolera_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Provoletera de cerámica - para microondas</span>
             <span class="info">Precio: <b><s>$ 2.800</s> VENDIDA</b><br>
@@ -331,7 +331,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/escurreplatos.jpeg" alt="">
+          <img src="images/escurreplatos_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Seca Platos Escurridor Premium 100% Acero Inoxidable - Incluye cubiertero y Bandeja para retirar el agua</span>
             <span class="info">Precio: <b><s>$ 14.000</s> VENDIDO</b><br>
@@ -519,7 +519,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/camarero.jpeg" alt="">
+          <img src="images/camarero_sold.jpeg" alt="">
           <div class="details">
             <span class="title">El Camarero - Un juego de Maldon</span>
             <span class="info">Precio: <b><s>$ 3.500</s> VENDIDO</b><br>
