--- a/venta/index.html
+++ b/venta/index.html
@@ -40,6 +40,7 @@
 
   <header class="site-header">
     <h1>¡¡¡ Nos mudamos y vendemos TODO !!!</h1>
+    <h3><i>Contacto: beranor@gmail.com</i></h3>
   </header>
 
   <ul class="menu">
