--- a/venta/index.html
+++ b/venta/index.html
@@ -553,10 +553,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/zanahorias.jpeg" alt="">
+          <img src="images/zanahorias_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Zanahorias - Mi primer juego de suma y resta</span>
-            <span class="info">Precio: <b>$ 1.000</b><br>
+			<span class="info">Precio: <b><s>$ 1.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
