Bici chica and Skate sold

--- a/venta/index.html
+++ b/venta/index.html
@@ -564,10 +564,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/bici_chica_1.jpeg" alt="">
+          <img src="images/bici_chica_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Bicicleta Rodado 16 - Azul - Reynolds - Triban</span>
-            <span class="info">Precio: <b>$ 13.000</b><br>
+	    <span class="info">Precio: <b><s>$ 13.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -586,10 +586,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/skate_1.jpeg" alt="">
+          <img src="images/skate_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</span>
-            <span class="info">Precio: <b>$ 1.500</b><br>
+	    <span class="info">Precio: <b><s>$ 1.500</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
