Reorder sold items

--- a/venta/index.html
+++ b/venta/index.html
@@ -97,10 +97,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/perforadora_sold.jpeg" alt="">
+          <img src="images/gear_vr.jpeg" alt="">
           <div class="details">
-	    <span class="title">Taladro percutor destornillador inalambrico Bauker (CD120)</span>
-            <span class="info">Precio: <b><s>$ 23.000</s> VENDIDO</b><br>
+            <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
+            <span class="info">Precio: <b>$ 7.000</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -108,10 +108,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/gear_vr.jpeg" alt="">
+          <img src="images/perforadora_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
-            <span class="info">Precio: <b>$ 7.000</b><br>
+	    <span class="title">Taladro percutor destornillador inalambrico Bauker (CD120)</span>
+            <span class="info">Precio: <b><s>$ 23.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -482,8 +482,52 @@
     <!--======-->
     <div id="toys" class="section">
 
-      <h2 style="color: blue">Juguetes y Rodados</h2>
+      <h2 style="color: blue">Rodados y Juegos</h2>
       <hr class="solid">
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/monopatin_1.jpeg" alt="">
+          <div class="details">
+            <span class="title">Monopatin Sieteveinte Glow - Metalico</span>
+            <span class="info">Precio: <b>$ 9.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/protectores.jpg" alt="">
+          <div class="details">
+            <span class="title">Set Protecciones Tuxs Profesional Kit Rodillera Codera Skate</span>
+            <span class="info">Precio: <b>$ 9.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/lego_city.jpeg" alt="">
+          <div class="details">
+            <span class="title">LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</span>
+            <span class="info">Precio: <b>$ 8.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/te_conozco.jpeg" alt="">
+          <div class="details">
+            <span class="title">Te Conozco? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</span>
+            <span class="info">Precio: <b>$ 2.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
 
       <div class="tiles">
 	<a class="tile" href="#">
@@ -531,32 +575,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/lego_city.jpeg" alt="">
+          <img src="images/skate_1_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</span>
-            <span class="info">Precio: <b>$ 8.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/te_conozco.jpeg" alt="">
-          <div class="details">
-            <span class="title">Te Conozco? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</span>
-            <span class="info">Precio: <b>$ 2.000</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/zanahorias_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Zanahorias - Mi primer juego de suma y resta</span>
-			<span class="info">Precio: <b><s>$ 1.000</s> VENDIDO</b><br>
+            <span class="title">Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</span>
+	    <span class="info">Precio: <b><s>$ 1.500</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -575,10 +597,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/monopatin_1.jpeg" alt="">
+          <img src="images/bici_grande_1_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">Monopatin Sieteveinte Glow - Metalico</span>
-            <span class="info">Precio: <b>$ 9.000</b><br>
+            <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
+            <span class="info">Precio: <b><s>$ 50.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -586,21 +608,10 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/skate_1_sold.jpeg" alt="">
+          <img src="images/zanahorias_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</span>
-	    <span class="info">Precio: <b><s>$ 1.500</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/protectores.jpg" alt="">
-          <div class="details">
-            <span class="title">Set Protecciones Tuxs Profesional Kit Rodillera Codera Skate</span>
-            <span class="info">Precio: <b>$ 9.000</b><br>
+            <span class="title">Zanahorias - Mi primer juego de suma y resta</span>
+			<span class="info">Precio: <b><s>$ 1.000</s> VENDIDO</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -617,21 +628,9 @@
         </a>
       </div>
 
-      <div class="tiles">
-	<a class="tile" href="#">
-          <img src="images/bici_grande_1_sold.jpeg" alt="">
-          <div class="details">
-            <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
-            <span class="info">Precio: <b><s>$ 50.000</s> VENDIDA</b><br>
-            Disponible: Inmediato</span>
-          </div>
-        </a>
-      </div>
-
     </div>
 
   </div>
-
 
 </body>
 
